# cybercafe-monitoring-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cybercafe-monitoring-system.cpp  cybercafe-monitoring-system.h
include/: cybercafe_monitoring_system.h  read_input_data.h
src/: cybercafe_monitoring_system.cc  main.cc  read_input_data.cc  test.cc
tests/: event_handlers_test.cc  input_data_test.cc  revenue_calculating_test.cc  test.cc
